fixed sizing of svgs in tree (was not accounting for translate and the right size was getting cut off). Fixed issue where default value of deceased of Y was being applied to all nodes. Brought some folks back from the dead.

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,7 +13,7 @@ th, label, strong, b, .label {
 }
 
 #col1,#col2,#col3{
-  padding-right: 10px;
+  padding-right: 5px;
 }
 
 #col1{
@@ -42,7 +42,7 @@ th, label, strong, b, .label {
   cursor:context-menu;
 }
 
-.container{
+.container-fluid{
   display:inline-flex;
 }
 
